m0ahr fixes